--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "1d4ec9b3ee1ba4a0",
+        "id": "78bc87923d9459a4",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "portfolio layout.md",
+            "file": "README.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "portfolio layout.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "portfolio layout.md",
+                "file": "README.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "portfolio layout.md"
+                "file": "README.md"
               }
             }
           }
@@ -128,9 +128,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "1d4ec9b3ee1ba4a0",
+  "active": "78bc87923d9459a4",
   "lastOpenFiles": [
-    "토지_AVM_1.md",
-    "README.md"
+    "portfolio layout.md",
+    "README.md",
+    "[scrap_and_preprocessing.R.md",
+    "토지_AVM_1.md"
   ]
 }
