--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "토지_AVM_1.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "토지_AVM_1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "README.md",
+                "file": "토지_AVM_1.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "README.md"
+                "file": "토지_AVM_1.md"
               }
             }
           }
@@ -128,11 +128,11 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "45ae35e7d8334ded",
+  "active": "78bc87923d9459a4",
   "lastOpenFiles": [
+    "README.md",
     "토지_AVM_1.md",
     "[scrap_and_preprocessing.R.md",
-    "README.md",
     "current.png"
   ]
 }
